@@ -5,6 +5,16 @@ You can see the complete list of recent changes, bugfixes and new features
 in the http://repo.or.cz/w/elinks.git[gitweb interface]. See the ChangeLog
 file for details.
 
+ELinks 0.12pre4.GIT now:
+------------------------
+
+To be released as 0.12pre5, 0.12rc1, or even 0.12.0.  This branch also
+includes the changes listed under ``ELinks 0.11.6.GIT now'' below.
+
+* minor bug 1017: To work around HTTP server bugs, disable
+  protocol.http.compression by default, until ELinks can report
+  decompression errors or automatically retry the connection.
+
 ELinks 0.12pre4:
 ----------------
 
